--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -797,8 +797,7 @@ year = {2006}
 }
 
 @InProceedings{conf/icdm/OsugiKS05,
-  title =       "Balancing Exploration and Exploitation: {A} New
-                 Algorithm for Active Machine Learning",
+  title =       "Balancing Exploration and Exploitation: {A} New Algorithm for Active Machine Learning",
   author =      "Thomas Takeo Osugi and Kun Deng and Stephen D. Scott",
   publisher =   "IEEE Computer Society",
   year =        "2005",
@@ -1688,3 +1687,4 @@ keywords = "Meta-learning systems "
   pages =       "2079--2107",
   \URL =         "http://portal.acm.org/citation.cfm?id=1859921",
 }
+
