--- a/stratsALCKappaSVMRedux.tex
+++ b/stratsALCKappaSVMRedux.tex
@@ -17,8 +17,8 @@
 13-cardiotocography 3... &   0.79/  0.04 &   0.85/  0.03 &   0.84/\textcolor{black}{\textbf{  0.02}} &   0.84/  0.03 &   0.84/  0.03 &   0.81/  0.05 &   0.81/  0.05 &   0.82/  0.04 &   0.81/  0.04 &   0.82/  0.04 &   0.79/  0.04 \\
 14-climate simulation... &   0.02/  0.04 & \underline{\textcolor{blue}{\textbf{  0.05}}}/  0.05 & \textcolor{black}{\textbf{  0.03}}/  0.04 &   0.02/  0.02 &   0.02/  0.04 & \textcolor{red}{\textbf{  0.01}}/  0.02 & \textcolor{red}{\textbf{  0.01}}/  0.02 &   0.02/  0.03 & \textcolor{red}{\textbf{  0.01}}/\textcolor{black}{\textbf{  0.01}} &   0.02/  0.02 &   0.02/  0.04 \\ \hline
 15-connect. mines vs... &   0.50/  0.08 &   0.52/\textcolor{black}{\textbf{  0.07}} &   0.50/  0.08 & \textcolor{red}{\textbf{  0.49}}/  0.08 & \textcolor{red}{\textbf{  0.49}}/  0.09 &   0.52/  0.09 &   0.52/  0.09 &   0.52/  0.08 & \textcolor{black}{\textbf{  0.53}}/  0.08 &   0.52/  0.09 &   0.51/  0.08 \\
-16-connect. vowel red... &   0.49/  0.02 &   0.49/  0.03 &   0.48/  0.02 &   0.47/  0.02 &   0.48/  0.02 &   0.49/  0.04 & \underline{\textcolor{blue}{\textbf{  0.53}}}/  0.02 &   0.41/  0.02 & \textcolor{black}{\textbf{  0.50}}/  0.02 & \textcolor{black}{\textbf{  0.50}}/  0.02 &   0.49/  0.02 \\
-17-connect. vowel... &   0.37/  0.02 &   0.36/  0.02 &   0.35/  0.02 &   0.35/  0.01 &   0.37/  0.01 & \textcolor{black}{\textbf{  0.39}}/  0.03 & \underline{\textcolor{blue}{\textbf{  0.40}}}/  0.02 &   0.25/  0.02 &   0.38/  0.02 &   0.37/  0.02 &   0.37/  0.02 \\
+16-connect. vowel red... &   0.49/\textcolor{black}{\textbf{  0.02}} &   0.49/  0.03 &   0.48/\textcolor{black}{\textbf{  0.02}} &   0.47/\textcolor{black}{\textbf{  0.02}} &   0.48/\textcolor{black}{\textbf{  0.02}} &   0.49/  0.04 & \underline{\textcolor{blue}{\textbf{  0.53}}}/\textcolor{black}{\textbf{  0.02}} &   0.41/\textcolor{black}{\textbf{  0.02}} &   0.50/\textcolor{black}{\textbf{  0.02}} &   0.50/\textcolor{black}{\textbf{  0.02}} &   0.49/\textcolor{black}{\textbf{  0.02}} \\
+17-connect. vowel... &   0.37/  0.02 &   0.36/  0.02 &   0.35/  0.02 &   0.35/\textcolor{black}{\textbf{  0.01}} &   0.37/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.39}}/  0.03 & \underline{\textcolor{blue}{\textbf{  0.40}}}/  0.02 &   0.25/  0.02 &   0.38/  0.02 &   0.37/  0.02 &   0.37/  0.02 \\
 18-dbworld subjects &   0.16/  0.15 & \textcolor{red}{\textbf{  0.09}}/  0.14 &   0.11/\textcolor{black}{\textbf{  0.12}} &   0.11/  0.14 & \underline{\textcolor{blue}{\textbf{  0.18}}}/  0.13 &   0.11/\textcolor{black}{\textbf{  0.12}} &   0.12/\textcolor{black}{\textbf{  0.12}} &   0.15/\textcolor{darkgreen}{\textbf{  0.10}} &   0.14/  0.14 &   0.13/  0.14 & \textcolor{black}{\textbf{  0.17}}/  0.14 \\
 19-first order theore... & \textcolor{blue}{\textbf{  0.05}}/  0.03 & \textcolor{blue}{\textbf{  0.05}}/  0.02 &   0.04/  0.02 &   0.04/  0.02 & \textcolor{red}{\textbf{  0.03}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.03}}/  0.02 &   0.04/  0.02 &   0.04/  0.03 &   0.04/  0.02 &   0.04/\textcolor{black}{\textbf{  0.01}} & \textcolor{blue}{\textbf{  0.05}}/  0.02 \\
 20-flare &   0.43/  0.04 & \textcolor{blue}{\textbf{  0.44}}/  0.04 &   0.43/\textcolor{black}{\textbf{  0.03}} &   0.43/\textcolor{darkgreen}{\textbf{  0.02}} &   0.42/\textcolor{black}{\textbf{  0.03}} &   0.38/  0.05 &   0.42/  0.04 &   0.38/  0.05 & \textcolor{blue}{\textbf{  0.44}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.44}}/\textcolor{black}{\textbf{  0.03}} &   0.43/  0.04 \\
@@ -33,7 +33,7 @@
 29-ionosphere &   0.79/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.04}} &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.79/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.75}}/  0.08 & \textcolor{red}{\textbf{  0.75}}/  0.08 & \textcolor{red}{\textbf{  0.75}}/  0.06 & \textcolor{red}{\textbf{  0.75}}/  0.12 &   0.77/  0.05 &   0.79/\textcolor{black}{\textbf{  0.04}} \\
 30-iris &   0.85/  0.04 &   0.85/  0.04 &   0.84/\textcolor{black}{\textbf{  0.03}} &   0.84/\textcolor{black}{\textbf{  0.03}} &   0.85/  0.04 & \textcolor{red}{\textbf{  0.77}}/  0.05 &   0.81/  0.06 &   0.81/\textcolor{black}{\textbf{  0.03}} &   0.83/  0.04 &   0.84/\textcolor{black}{\textbf{  0.03}} &   0.85/  0.04 \\
 31-kr vs kp &   0.59/  0.03 &   0.59/  0.04 &   0.61/\textcolor{black}{\textbf{  0.02}} &   0.61/  0.03 &   0.59/  0.03 &   0.64/  0.06 &   0.64/  0.06 &   0.62/  0.03 & \textcolor{black}{\textbf{  0.65}}/  0.06 &   0.64/  0.08 &   0.59/  0.03 \\
-32-leaf &   0.29/  0.03 &   0.28/  0.02 &   0.28/  0.02 &   0.28/  0.02 &   0.28/  0.02 &   0.28/  0.02 & \textcolor{blue}{\textbf{  0.30}}/  0.02 &   0.18/  0.02 & \textcolor{blue}{\textbf{  0.30}}/  0.02 &   0.29/  0.02 &   0.29/  0.03 \\\end{tabular}}\label{stratsALCKappa0aSVMRedux}
+32-leaf &   0.29/  0.03 &   0.28/\textcolor{black}{\textbf{  0.02}} &   0.28/\textcolor{black}{\textbf{  0.02}} &   0.28/\textcolor{black}{\textbf{  0.02}} &   0.28/\textcolor{black}{\textbf{  0.02}} &   0.28/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.30}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.30}}/\textcolor{black}{\textbf{  0.02}} &   0.29/\textcolor{black}{\textbf{  0.02}} &   0.29/  0.03 \\\end{tabular}}\label{stratsALCKappa0aSVMRedux}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
@@ -54,8 +54,8 @@
 13-cardiotocography 3... &   0.84/  0.05 &   0.85/  0.04 &   0.81/  0.04 & \underline{\textcolor{blue}{\textbf{  0.88}}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.87}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.14 & \textcolor{red}{\textbf{  0.54}}/  0.09 \\
 14-climate simulation... & \textcolor{red}{\textbf{  0.01}}/\textcolor{black}{\textbf{  0.01}} &   0.02/  0.02 &   0.02/  0.02 & \textcolor{red}{\textbf{  0.01}}/  0.02 & \textcolor{red}{\textbf{  0.01}}/  0.02 &   0.02/  0.02 & \textcolor{red}{\textbf{  0.01}}/  0.03 & \textcolor{red}{\textbf{  0.01}}/  0.03 \\ \hline
 15-connect. mines vs... &   0.50/  0.08 & \underline{\textcolor{blue}{\textbf{  0.55}}}/  0.08 & \textcolor{black}{\textbf{  0.53}}/  0.08 &   0.50/  0.09 &   0.50/\textcolor{black}{\textbf{  0.07}} &   0.52/\textcolor{black}{\textbf{  0.07}} &   0.50/  0.09 &   0.50/  0.08 \\
-16-connect. vowel red... & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} &   0.40/  0.05 &   0.37/  0.04 \\
-17-connect. vowel... & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} &   0.28/  0.03 &   0.24/  0.03 \\
+16-connect. vowel red... & \textcolor{black}{\textbf{  0.52}}/  0.03 & \textcolor{black}{\textbf{  0.52}}/  0.03 &   0.51/\textcolor{black}{\textbf{  0.02}} &   0.51/\textcolor{black}{\textbf{  0.02}} &   0.49/\textcolor{black}{\textbf{  0.02}} &   0.50/\textcolor{black}{\textbf{  0.02}} &   0.40/  0.05 & \textcolor{red}{\textbf{  0.37}}/  0.04 \\
+17-connect. vowel... & \textcolor{black}{\textbf{  0.39}}/  0.03 & \textcolor{black}{\textbf{  0.39}}/  0.02 &   0.37/  0.02 &   0.37/  0.02 &   0.36/  0.02 &   0.37/\textcolor{black}{\textbf{  0.01}} &   0.28/  0.03 & \textcolor{red}{\textbf{  0.24}}/  0.03 \\
 18-dbworld subjects &   0.16/  0.16 &   0.15/\textcolor{black}{\textbf{  0.12}} &   0.14/  0.16 &   0.10/  0.13 &   0.11/  0.14 &   0.13/  0.16 &   0.16/\textcolor{black}{\textbf{  0.12}} &   0.13/\textcolor{black}{\textbf{  0.12}} \\
 19-first order theore... &   0.04/  0.02 & \textcolor{blue}{\textbf{  0.05}}/  0.03 & \textcolor{red}{\textbf{  0.03}}/  0.02 &   0.04/\textcolor{black}{\textbf{  0.01}} &   0.04/  0.02 & \textcolor{red}{\textbf{  0.03}}/\textcolor{black}{\textbf{  0.01}} &   0.04/  0.03 &   0.04/  0.03 \\
 20-flare & \textcolor{blue}{\textbf{  0.44}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.44}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.44}}/\textcolor{black}{\textbf{  0.03}} &   0.43/\textcolor{black}{\textbf{  0.03}} &   0.43/\textcolor{black}{\textbf{  0.03}} &   0.43/\textcolor{black}{\textbf{  0.03}} &   0.39/  0.04 & \textcolor{red}{\textbf{  0.35}}/\textcolor{black}{\textbf{  0.03}} \\
@@ -70,7 +70,7 @@
 29-ionosphere &   0.79/  0.05 &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.79/\textcolor{black}{\textbf{  0.04}} &   0.79/\textcolor{darkgreen}{\textbf{  0.03}} &   0.79/\textcolor{black}{\textbf{  0.04}} \\
 30-iris &   0.83/  0.05 &   0.79/  0.05 &   0.82/  0.05 &   0.84/  0.04 &   0.84/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.86}}/\textcolor{black}{\textbf{  0.03}} &   0.81/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.87}}}/  0.04 \\
 31-kr vs kp &   0.59/  0.03 &   0.63/  0.03 & \underline{\textcolor{blue}{\textbf{  0.66}}}/  0.05 &   0.64/  0.05 & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.02}} &   0.63/  0.05 & \textcolor{red}{\textbf{  0.41}}/  0.07 & \textcolor{red}{\textbf{  0.41}}/  0.06 \\
-32-leaf & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} \\\end{tabular}\label{stratsALCKappa0bSVMRedux}
+32-leaf & \textcolor{black}{\textbf{  0.30}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.30}}/\textcolor{black}{\textbf{  0.02}} &   0.29/\textcolor{black}{\textbf{  0.02}} &   0.28/\textcolor{black}{\textbf{  0.02}} &   0.28/\textcolor{black}{\textbf{  0.02}} &   0.28/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.30}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.31}}}/\textcolor{black}{\textbf{  0.02}} \\\end{tabular}\label{stratsALCKappa0bSVMRedux}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
@@ -78,14 +78,14 @@
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & \textbf{ATUeuc} & \textbf{ATUman} & \textbf{ATUmah} & Ent & Mar & DWeuc & TUeuc & TUman & \textbf{SGmultic}\\ \hline 33-leukemia haslinger &   0.65/  0.11 &   0.67/  0.11 &   0.65/  0.11 &   0.65/  0.11 &   0.65/  0.12 & \textcolor{red}{\textbf{  0.51}}/  0.12 & \textcolor{red}{\textbf{  0.51}}/  0.12 &   0.54/  0.11 &   0.53/  0.14 &   0.56/  0.11 &   0.66/  0.11 \\
 34-mammographic mass &   0.54/\textcolor{black}{\textbf{  0.04}} &   0.53/  0.05 &   0.53/  0.05 &   0.53/  0.05 &   0.54/  0.05 &   0.51/  0.07 &   0.51/  0.06 & \textcolor{red}{\textbf{  0.48}}/  0.07 &   0.53/  0.05 &   0.52/  0.05 &   0.54/\textcolor{black}{\textbf{  0.04}} \\
-35-mfeat fourier &   0.52/  0.02 &   0.52/  0.02 &   0.52/  0.02 & \textcolor{blue}{\textbf{  0.53}}/  0.02 &   0.52/  0.02 &   0.33/  0.08 &   0.52/  0.05 &   0.38/  0.03 &   0.52/  0.05 & \textcolor{blue}{\textbf{  0.53}}/  0.03 &   0.52/  0.02 \\
+35-mfeat fourier &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.33}}/  0.08 &   0.52/  0.05 &   0.38/  0.03 &   0.52/  0.05 &   0.53/  0.03 &   0.52/\textcolor{black}{\textbf{  0.02}} \\
 36-molecular promotor... &   0.52/  0.09 &   0.48/  0.09 &   0.47/  0.08 &   0.46/\textcolor{black}{\textbf{  0.06}} &   0.50/  0.08 &   0.47/  0.10 &   0.47/  0.10 &   0.47/  0.07 &   0.50/  0.10 &   0.50/  0.08 &   0.52/  0.08 \\
-37-molecular splice j... &   0.60/  0.05 &   0.61/  0.03 &   0.62/  0.02 &   0.63/  0.03 &   0.61/  0.02 &   0.57/  0.08 & \textcolor{black}{\textbf{  0.64}}/  0.04 &   0.30/  0.04 &   0.61/  0.11 & \underline{\textcolor{blue}{\textbf{  0.65}}}/  0.05 & \textcolor{red}{\textbf{ -2.00}} \\
+37-molecular splice j... &   0.60/  0.05 &   0.61/  0.03 &   0.62/  0.02 &   0.63/  0.03 &   0.61/  0.02 &   0.57/  0.08 & \textcolor{black}{\textbf{  0.64}}/  0.04 &   0.30/  0.04 &   0.61/  0.11 & \underline{\textcolor{blue}{\textbf{  0.65}}}/  0.05 &   0.60/  0.05 \\
 38-monks1 &   0.50/  0.06 &   0.48/  0.07 &   0.47/  0.05 &   0.48/  0.05 &   0.49/  0.06 & \textcolor{black}{\textbf{  0.57}}/  0.06 & \textcolor{black}{\textbf{  0.57}}/  0.06 & \textcolor{red}{\textbf{  0.33}}/  0.05 & \textcolor{black}{\textbf{  0.57}}/  0.07 &   0.55/  0.06 &   0.50/  0.06 \\
 39-monks2 &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/  0.02 & \textcolor{red}{\textbf{ -0.02}}/  0.02 &  -0.01/  0.02 &  -0.01/  0.03 &   0.00/\textcolor{black}{\textbf{  0.01}} &   0.00/\textcolor{black}{\textbf{  0.01}} &   0.00/\textcolor{black}{\textbf{  0.01}} &   0.00/  0.02 &  -0.01/  0.02 &  -0.01/\textcolor{black}{\textbf{  0.01}} \\ \hline
 40-monks3 & \textcolor{red}{\textbf{  0.76}}/  0.05 &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.79/  0.04 &   0.79/  0.04 &   0.78/  0.04 &   0.79/  0.05 &   0.79/  0.04 & \textcolor{red}{\textbf{  0.76}}/  0.05 \\
-41-movement libras &   0.47/  0.03 &   0.48/  0.04 &   0.46/  0.03 &   0.47/  0.03 &   0.46/  0.04 &   0.46/  0.03 & \underline{\textcolor{blue}{\textbf{  0.50}}}/  0.04 &   0.44/  0.03 & \textcolor{black}{\textbf{  0.49}}/  0.03 & \textcolor{black}{\textbf{  0.49}}/  0.03 &   0.47/  0.03 \\
-42-movement libras 10 &   0.53/  0.03 &   0.54/  0.03 &   0.52/  0.03 &   0.53/  0.03 &   0.53/  0.02 &   0.53/  0.03 & \underline{\textcolor{blue}{\textbf{  0.57}}}/  0.03 &   0.54/  0.02 &   0.55/  0.03 &   0.55/  0.02 &   0.53/  0.04 \\
+41-movement libras &   0.47/\textcolor{black}{\textbf{  0.03}} &   0.48/  0.04 &   0.46/\textcolor{black}{\textbf{  0.03}} &   0.47/\textcolor{black}{\textbf{  0.03}} &   0.46/  0.04 &   0.46/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.50}}/  0.04 & \textcolor{red}{\textbf{  0.44}}/\textcolor{black}{\textbf{  0.03}} &   0.49/\textcolor{black}{\textbf{  0.03}} &   0.49/\textcolor{black}{\textbf{  0.03}} &   0.47/\textcolor{black}{\textbf{  0.03}} \\
+42-movement libras 10 &   0.53/  0.03 &   0.54/  0.03 & \textcolor{red}{\textbf{  0.52}}/  0.03 &   0.53/  0.03 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.03 & \underline{\textcolor{blue}{\textbf{  0.57}}}/  0.03 &   0.54/\textcolor{black}{\textbf{  0.02}} &   0.55/  0.03 &   0.55/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.04 \\
 43-mushroom &   0.88/  0.02 &   0.89/  0.02 &   0.86/\textcolor{black}{\textbf{  0.01}} &   0.86/\textcolor{black}{\textbf{  0.01}} &   0.87/  0.02 &   0.77/  0.19 &   0.77/  0.19 &   0.83/  0.11 &   0.84/  0.14 &   0.88/  0.07 &   0.88/  0.02 \\
 44-ozone eighthr & \textcolor{red}{\textbf{  0.04}}/\textcolor{black}{\textbf{  0.05}} &   0.07/  0.08 &   0.07/  0.07 &   0.07/  0.07 &   0.07/  0.07 &   0.13/\textcolor{black}{\textbf{  0.05}} &   0.13/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.14}}/  0.06 &   0.13/  0.07 &   0.13/  0.06 & \textcolor{red}{\textbf{  0.04}}/\textcolor{black}{\textbf{  0.05}} \\
 45-ozone onehr & \textcolor{black}{\textbf{  0.03}}/  0.05 & \textcolor{black}{\textbf{  0.03}}/  0.04 & \textcolor{black}{\textbf{  0.03}}/  0.04 & \underline{\textcolor{blue}{\textbf{  0.04}}}/  0.05 & \textcolor{black}{\textbf{  0.03}}/  0.05 &   0.01/  0.02 &   0.01/\textcolor{black}{\textbf{  0.01}} &   0.01/  0.02 &   0.02/  0.02 &   0.01/  0.02 & \textcolor{black}{\textbf{  0.03}}/  0.05 \\
@@ -115,14 +115,14 @@
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
  & EERacu & EERent & TUmah & \textbf{GATUeuc} & \textbf{GATUman} & \textbf{GATUmah} & SVMRBFbal & SVMRBFsim\\ \hline 33-leukemia haslinger &   0.64/  0.11 & \textcolor{black}{\textbf{  0.68}}/  0.12 & \textcolor{red}{\textbf{  0.51}}/  0.12 &   0.65/  0.11 &   0.63/\textcolor{black}{\textbf{  0.10}} &   0.61/\textcolor{black}{\textbf{  0.10}} &   0.65/  0.11 & \underline{\textcolor{blue}{\textbf{  0.69}}}/  0.11 \\
 34-mammographic mass &   0.51/  0.05 &   0.54/  0.05 &   0.53/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.55}}/  0.05 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.04}} &   0.54/  0.05 &   0.52/  0.05 &   0.53/\textcolor{black}{\textbf{  0.04}} \\
-35-mfeat fourier & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} &   0.39/  0.03 &   0.40/  0.05 \\
+35-mfeat fourier & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.55}}}/  0.03 &   0.53/  0.03 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.39/  0.03 &   0.40/  0.05 \\
 36-molecular promotor... & \textcolor{black}{\textbf{  0.56}}/  0.08 & \underline{\textcolor{blue}{\textbf{  0.59}}}/\textcolor{black}{\textbf{  0.06}} &   0.49/  0.09 & \textcolor{red}{\textbf{  0.45}}/  0.10 & \textcolor{red}{\textbf{  0.45}}/\textcolor{black}{\textbf{  0.06}} &   0.49/  0.09 &   0.47/  0.07 &   0.49/  0.07 \\
 37-molecular splice j... & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} &   0.62/  0.03 &   0.62/  0.03 \\
 38-monks1 &   0.49/  0.07 &   0.56/  0.08 & \textcolor{black}{\textbf{  0.57}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.59}}}/  0.05 &   0.56/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.04}} &   0.47/  0.08 &   0.45/  0.08 \\
 39-monks2 &   0.00/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &   0.00/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/  0.02 &  -0.01/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.05}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.07}}}/  0.05 \\ \hline
 40-monks3 &   0.77/  0.05 & \underline{\textcolor{blue}{\textbf{  0.81}}}/  0.04 &   0.78/  0.05 &   0.79/  0.04 &   0.78/  0.04 &   0.79/  0.04 & \textcolor{black}{\textbf{  0.80}}/  0.04 &   0.79/\textcolor{black}{\textbf{  0.03}} \\
-41-movement libras & \textcolor{black}{\textbf{  0.49}}/  0.03 & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} &   0.45/  0.03 &   0.45/  0.04 \\
-42-movement libras 10 & \textcolor{black}{\textbf{  0.56}}/  0.03 & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} &   0.52/  0.04 &   0.52/  0.04 \\
+41-movement libras &   0.49/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.50}}/\textcolor{black}{\textbf{  0.03}} &   0.49/\textcolor{black}{\textbf{  0.03}} &   0.48/\textcolor{black}{\textbf{  0.03}} &   0.47/\textcolor{black}{\textbf{  0.03}} &   0.48/\textcolor{black}{\textbf{  0.03}} &   0.45/\textcolor{black}{\textbf{  0.03}} &   0.45/  0.04 \\
+42-movement libras 10 & \textcolor{black}{\textbf{  0.56}}/  0.03 & \textcolor{black}{\textbf{  0.56}}/  0.04 & \textcolor{black}{\textbf{  0.56}}/\textcolor{black}{\textbf{  0.02}} &   0.53/  0.03 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.54/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.52}}/  0.04 & \textcolor{red}{\textbf{  0.52}}/  0.04 \\
 43-mushroom & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.91}}}/  0.03 &   0.78/  0.22 &   0.88/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.90}}/  0.02 &   0.76/  0.11 & \textcolor{red}{\textbf{  0.72}}/  0.17 \\
 44-ozone eighthr &   0.13/  0.07 & \underline{\textcolor{blue}{\textbf{  0.18}}}/  0.07 & \textcolor{black}{\textbf{  0.14}}/  0.07 &   0.09/  0.06 &   0.10/  0.07 &   0.12/\textcolor{black}{\textbf{  0.05}} &   0.13/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.14}}/\textcolor{black}{\textbf{  0.05}} \\
 45-ozone onehr & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.01}} &   0.02/  0.02 &   0.01/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.01}} &   0.01/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.00}}/\textcolor{black}{\textbf{  0.01}} \\
@@ -139,7 +139,7 @@
 56-robot nav sensor r... &   0.78/  0.02 &   0.79/  0.02 &   0.79/  0.02 &   0.79/\textcolor{black}{\textbf{  0.01}} &   0.79/  0.02 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.01}} &   0.59/  0.05 &   0.64/  0.05 \\
 57-saheart & \textcolor{black}{\textbf{  0.22}}/  0.08 & \textcolor{black}{\textbf{  0.22}}/  0.07 &   0.20/  0.07 &   0.20/  0.08 &   0.18/  0.08 &   0.19/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.25}}}/  0.07 &   0.21/  0.07 \\
 58-seeds &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.81/\textcolor{black}{\textbf{  0.05}} &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.84/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.85}}/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} & \underline{\textcolor{blue}{\textbf{  0.86}}}/\textcolor{black}{\textbf{  0.05}} \\
-59-semeion & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} \\
+59-semeion & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} &   0.57/  0.03 &   0.58/  0.03 \\
 60-spambase &   0.63/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.65}}/  0.04 & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.03}} &   0.63/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.66}}}/\textcolor{black}{\textbf{  0.03}} &   0.60/\textcolor{black}{\textbf{  0.03}} &   0.61/  0.04 \\ \hline
 61-spect heart &   0.25/\textcolor{black}{\textbf{  0.06}} &   0.25/  0.07 &   0.24/  0.08 &   0.25/\textcolor{black}{\textbf{  0.06}} &   0.24/  0.08 &   0.25/  0.07 & \textcolor{black}{\textbf{  0.26}}/  0.08 & \underline{\textcolor{blue}{\textbf{  0.29}}}/  0.09 \\
 62-spectf heart &   0.10/  0.06 &   0.12/  0.06 &   0.10/\textcolor{black}{\textbf{  0.05}} &   0.09/\textcolor{black}{\textbf{  0.05}} &   0.11/  0.07 &   0.09/  0.06 &   0.07/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.05}} \\
@@ -163,7 +163,7 @@
 75-thyroid sick &   0.23/  0.06 &   0.23/  0.06 &   0.24/\textcolor{black}{\textbf{  0.05}} &   0.23/\textcolor{black}{\textbf{  0.05}} &   0.22/\textcolor{black}{\textbf{  0.05}} &   0.18/  0.08 &   0.17/  0.08 & \textcolor{red}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.05}} &   0.23/  0.07 & \textcolor{blue}{\textbf{  0.25}}/  0.06 &   0.23/  0.06 \\
 76-thyroid sick euthy... & \textcolor{red}{\textbf{  0.16}}/  0.11 &   0.22/  0.16 &   0.17/  0.10 &   0.19/  0.10 &   0.23/  0.09 &   0.44/  0.09 &   0.44/  0.09 & \textcolor{black}{\textbf{  0.46}}/  0.08 &   0.43/  0.13 &   0.45/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.16}}/  0.11 \\
 77-tic tac toe &   0.32/  0.05 &   0.32/  0.05 &   0.28/  0.05 &   0.25/\textcolor{black}{\textbf{  0.04}} & \textcolor{red}{\textbf{  0.16}}/\textcolor{black}{\textbf{  0.04}} &   0.37/  0.08 &   0.37/  0.07 &   0.32/  0.07 & \textcolor{black}{\textbf{  0.38}}/  0.08 & \textcolor{black}{\textbf{  0.38}}/  0.07 &   0.32/  0.05 \\
-78-turkiye student &   0.13/  0.02 &   0.13/  0.02 &   0.13/  0.02 &   0.13/  0.02 &   0.12/  0.01 &   0.12/  0.02 & \textcolor{blue}{\textbf{  0.14}}/  0.02 &   0.10/  0.02 &   0.13/  0.02 & \textcolor{blue}{\textbf{  0.14}}/  0.02 &   0.13/  0.02 \\ \hline
+78-turkiye student &   0.13/  0.02 &   0.13/  0.02 &   0.13/  0.02 &   0.13/  0.02 &   0.12/\textcolor{black}{\textbf{  0.01}} &   0.12/  0.02 & \textcolor{blue}{\textbf{  0.14}}/  0.02 & \textcolor{red}{\textbf{  0.10}}/  0.02 &   0.13/  0.02 & \textcolor{blue}{\textbf{  0.14}}/  0.02 &   0.13/  0.02 \\ \hline
 79-twonorm &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.88/  0.02 &   0.87/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.88/  0.02 & \textcolor{red}{\textbf{  0.71}}/  0.08 & \textcolor{red}{\textbf{  0.71}}/  0.08 &   0.81/  0.03 &   0.76/  0.07 &   0.78/  0.06 &   0.88/\textcolor{black}{\textbf{  0.01}} \\
 80-user knowledge &   0.68/  0.03 &   0.69/  0.03 &   0.70/\textcolor{black}{\textbf{  0.02}} &   0.69/  0.03 &   0.69/\textcolor{black}{\textbf{  0.02}} &   0.65/  0.03 &   0.70/  0.04 & \textcolor{red}{\textbf{  0.63}}/  0.07 &   0.71/\textcolor{black}{\textbf{  0.02}} &   0.71/\textcolor{black}{\textbf{  0.02}} &   0.68/\textcolor{black}{\textbf{  0.02}} \\
 81-vertebra column 2c &   0.55/  0.08 &   0.55/  0.08 &   0.55/  0.09 &   0.56/  0.08 &   0.56/\textcolor{black}{\textbf{  0.07}} & \textcolor{red}{\textbf{  0.54}}/  0.09 & \textcolor{red}{\textbf{  0.54}}/  0.09 &   0.55/  0.09 &   0.55/  0.09 &   0.56/  0.08 &   0.55/  0.08 \\
@@ -198,7 +198,7 @@
 75-thyroid sick &   0.23/  0.06 &   0.23/  0.08 & \textcolor{blue}{\textbf{  0.25}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{blue}{\textbf{  0.25}}/\textcolor{darkgreen}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.25}}/  0.06 &   0.23/\textcolor{black}{\textbf{  0.05}} &   0.15/  0.08 &   0.15/  0.06 \\
 76-thyroid sick euthy... &   0.37/  0.13 & \underline{\textcolor{blue}{\textbf{  0.47}}}/\textcolor{black}{\textbf{  0.07}} &   0.44/  0.11 &   0.32/  0.16 &   0.27/  0.17 &   0.36/  0.11 &   0.39/  0.08 &   0.38/  0.11 \\
 77-tic tac toe &   0.34/  0.05 &   0.35/  0.05 & \textcolor{black}{\textbf{  0.38}}/  0.05 & \underline{\textcolor{blue}{\textbf{  0.39}}}/  0.05 &   0.32/\textcolor{black}{\textbf{  0.04}} &   0.36/\textcolor{black}{\textbf{  0.04}} &   0.31/  0.05 &   0.30/  0.06 \\
-78-turkiye student &   0.13/  0.02 & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} &   0.10/  0.02 &   0.12/  0.02 \\ \hline
+78-turkiye student &   0.13/  0.02 & \textcolor{blue}{\textbf{  0.14}}/\textcolor{black}{\textbf{  0.01}} &   0.13/  0.02 &   0.13/\textcolor{black}{\textbf{  0.01}} &   0.13/  0.02 &   0.12/\textcolor{black}{\textbf{  0.01}} & \textcolor{red}{\textbf{  0.10}}/  0.02 &   0.12/  0.02 \\ \hline
 79-twonorm &   0.87/  0.02 & \textcolor{blue}{\textbf{  0.90}}/  0.02 &   0.73/  0.07 &   0.85/  0.02 &   0.86/  0.02 &   0.86/  0.02 &   0.87/  0.02 & \textcolor{blue}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.01}} \\
 80-user knowledge & \textcolor{blue}{\textbf{  0.72}}/\textcolor{black}{\textbf{  0.02}} &   0.71/  0.04 &   0.71/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.72}}/\textcolor{black}{\textbf{  0.02}} &   0.71/\textcolor{black}{\textbf{  0.02}} &   0.71/\textcolor{black}{\textbf{  0.02}} &   0.66/  0.03 &   0.66/  0.04 \\
 81-vertebra column 2c &   0.57/  0.08 & \textcolor{blue}{\textbf{  0.58}}/  0.08 &   0.57/  0.09 &   0.56/  0.09 &   0.56/  0.08 &   0.56/\textcolor{black}{\textbf{  0.07}} & \textcolor{blue}{\textbf{  0.58}}/  0.10 &   0.56/  0.09 \\
